Bug 275703 - Kdevelop crashes every time after invoking Find Uses on C++ function ptr typedef
Summary: Kdevelop crashes every time after invoking Find Uses on C++ function ptr typedef
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.60
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 4.2.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-15 11:44 UTC by Romek
Modified: 2011-06-17 23:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Romek 2011-06-15 11:44:41 UTC
Application: kdevelop (4.2.60)
KDE Platform Version: 4.6.2 (4.6.2) (Compiled from sources)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-8-generic-pae i686
Distribution: Linux Mint 11 Katya

-- Information about the crash:
- What I was doing when the application crashed:

Every time I try to find uses of following typedef the kdevelop crashes:

typedef SomeType (*TraversalCallback)(TheOtherType* pObjPtr,
                                           JustAnotherClass* pTcPtr, 
                                           void* pUserData);

So basicaly after pressing right mouse button on TraversalCallback word and selected Find Uses, the app crashes.

I have had opened 3 projects and they have quite lot of files.

If you need more details please contact me.

BR,
Roman

The crash can be reproduced every time.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
[Current thread is 1 (Thread 0xb2c36ac0 (LWP 6801))]

Thread 18 (Thread 0xb26bbb70 (LWP 6804)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb534af76 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0xb474284b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb47321af in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb473292b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb27f4304 in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#6  0xb475b2df in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#8  0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 17 (Thread 0xad003b70 (LWP 6805)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb5231834 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb5367454 in pthread_cond_timedwait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb604b3e5 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb4cfd0ad in KDevelop::DUChainPrivate::CleanupThread::run (this=0x86be560) at /home/romek/src/kdevplatform/language/duchain/duchain.cpp:286
#5  0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#6  0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#7  0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 16 (Thread 0xab0e2b70 (LWP 6816)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb534af76 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0xb474284b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb47321af in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb4732524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb616c577 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0xb613e289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0xb613e522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0xb60482a0 in QThread::exec() () from /usr/lib/libQtCore.so.4
#9  0xb4e0af28 in KDevelop::CompletionWorkerThread::run (this=0x8875a28) at /home/romek/src/kdevplatform/language/codecompletion/codecompletionmodel.cpp:84
#10 0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#11 0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 15 (Thread 0xa9b74b70 (LWP 6817)):
#0  0xb5205d41 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0xb60a0dd8 in ?? () from /usr/lib/libQtCore.so.4
#2  0xb616d4f2 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb616bd32 in ?? () from /usr/lib/libQtCore.so.4
#4  0xb616bdcd in ?? () from /usr/lib/libQtCore.so.4
#5  0xb4730fd4 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#6  0xb4731e63 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0xb4732524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0xb616c577 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#9  0xb613e289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0xb613e522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0xb60482a0 in QThread::exec() () from /usr/lib/libQtCore.so.4
#12 0xb4e0af28 in KDevelop::CompletionWorkerThread::run (this=0x88760d8) at /home/romek/src/kdevplatform/language/codecompletion/codecompletionmodel.cpp:84
#13 0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#14 0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#15 0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 14 (Thread 0xa733ab70 (LWP 6822)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb523148c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb53673fd in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb50e8817 in ?? () from /usr/lib/libQtScript.so.4
#4  0xb50e8851 in ?? () from /usr/lib/libQtScript.so.4
#5  0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#6  0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 13 (Thread 0xa5f3cb70 (LWP 6823)):
#0  0xb4730e4c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb4731e63 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb4732524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb616c577 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0xb613e289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0xb613e522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0xb60482a0 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0xb611ffdb in ?? () from /usr/lib/libQtCore.so.4
#8  0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#9  0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#10 0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 12 (Thread 0xa47dcb70 (LWP 6839)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb523148c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb53673fd in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb3fd7b57 in ?? () from /usr/lib/libQtWebKit.so.4
#4  0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#5  0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 11 (Thread 0xa38e5b70 (LWP 6843)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb534af76 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0xb474284b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb47321af in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb4732524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb616c577 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0xb613e289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0xb613e522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0xb60482a0 in QThread::exec() () from /usr/lib/libQtCore.so.4
#9  0xb611ffdb in ?? () from /usr/lib/libQtCore.so.4
#10 0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#11 0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 10 (Thread 0xa30e4b70 (LWP 6844)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb5231834 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb5367454 in pthread_cond_timedwait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb604b3e5 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb603e8f1 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#6  0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#7  0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 9 (Thread 0xa28e3b70 (LWP 6845)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb534af76 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0xb474284b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb47321af in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb4732524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb616c577 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0xb613e289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0xb613e522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0xb60482a0 in QThread::exec() () from /usr/lib/libQtCore.so.4
#9  0xb611ffdb in ?? () from /usr/lib/libQtCore.so.4
#10 0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#11 0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 8 (Thread 0xa20e2b70 (LWP 6846)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb5231834 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb5367454 in pthread_cond_timedwait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb604b3e5 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb603e8f1 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#6  0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#7  0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 7 (Thread 0xa18e1b70 (LWP 6847)):
#0  0xb4732065 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb4732524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb616c577 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#3  0xb613e289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0xb613e522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0xb60482a0 in QThread::exec() () from /usr/lib/libQtCore.so.4
#6  0xb611ffdb in ?? () from /usr/lib/libQtCore.so.4
#7  0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#8  0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#9  0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 6 (Thread 0xa10e0b70 (LWP 6848)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb5231834 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb5367454 in pthread_cond_timedwait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb604b3e5 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb603e8f1 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#6  0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#7  0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 5 (Thread 0xa08dfb70 (LWP 6859)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb523148c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb53673fd in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb604b467 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb704d7e0 in ?? () from /usr/lib/libthreadweaver.so.4
#5  0xb705047c in ?? () from /usr/lib/libthreadweaver.so.4
#6  0xb704d42b in ?? () from /usr/lib/libthreadweaver.so.4
#7  0xb705056a in ?? () from /usr/lib/libthreadweaver.so.4
#8  0xb704d373 in ?? () from /usr/lib/libthreadweaver.so.4
#9  0xb704ef9e in ?? () from /usr/lib/libthreadweaver.so.4
#10 0xb704f05b in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#11 0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#12 0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#13 0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 4 (Thread 0xa00deb70 (LWP 6860)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb523148c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb53673fd in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb604b467 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb704d7e0 in ?? () from /usr/lib/libthreadweaver.so.4
#5  0xb705047c in ?? () from /usr/lib/libthreadweaver.so.4
#6  0xb704d42b in ?? () from /usr/lib/libthreadweaver.so.4
#7  0xb705056a in ?? () from /usr/lib/libthreadweaver.so.4
#8  0xb704d373 in ?? () from /usr/lib/libthreadweaver.so.4
#9  0xb7050589 in ?? () from /usr/lib/libthreadweaver.so.4
#10 0xb704d373 in ?? () from /usr/lib/libthreadweaver.so.4
#11 0xb7050589 in ?? () from /usr/lib/libthreadweaver.so.4
#12 0xb704d373 in ?? () from /usr/lib/libthreadweaver.so.4
#13 0xb704ef9e in ?? () from /usr/lib/libthreadweaver.so.4
#14 0xb704f05b in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#15 0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#16 0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 3 (Thread 0x9e07bb70 (LWP 7188)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb523148c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb53673fd in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb604b467 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb704d7e0 in ?? () from /usr/lib/libthreadweaver.so.4
#5  0xb705047c in ?? () from /usr/lib/libthreadweaver.so.4
#6  0xb704d42b in ?? () from /usr/lib/libthreadweaver.so.4
#7  0xb705056a in ?? () from /usr/lib/libthreadweaver.so.4
#8  0xb704d373 in ?? () from /usr/lib/libthreadweaver.so.4
#9  0xb704ef9e in ?? () from /usr/lib/libthreadweaver.so.4
#10 0xb704f05b in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#11 0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#12 0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#13 0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 2 (Thread 0x9d87ab70 (LWP 7189)):
#0  0xb76f2424 in __kernel_vsyscall ()
#1  0xb523148c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb53673fd in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb604b467 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb704d7e0 in ?? () from /usr/lib/libthreadweaver.so.4
#5  0xb705047c in ?? () from /usr/lib/libthreadweaver.so.4
#6  0xb704d42b in ?? () from /usr/lib/libthreadweaver.so.4
#7  0xb705056a in ?? () from /usr/lib/libthreadweaver.so.4
#8  0xb704d373 in ?? () from /usr/lib/libthreadweaver.so.4
#9  0xb704ef9e in ?? () from /usr/lib/libthreadweaver.so.4
#10 0xb704f05b in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#11 0xb604ada2 in ?? () from /usr/lib/libQtCore.so.4
#12 0xb522ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#13 0xb535973e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb2c36ac0 (LWP 6801)):
[KCrash Handler]
#7  QVector<KDevelop::SimpleRange>::realloc (this=0xbf82f860, asize=60540694, aalloc=90811042) at /usr/include/qt4/QtCore/qvector.h:468
#8  0xb4e1b5dc in QVector<KDevelop::SimpleRange>::append (this=0xbf82f860, t=...) at /usr/include/qt4/QtCore/qvector.h:549
#9  0xb4e19681 in operator<< (identifier=..., lineText=..., lineNumber=0, ret=..., surroundedByBoundary=true) at /usr/include/qt4/QtCore/qvector.h:286
#10 KDevelop::grepLine (identifier=..., lineText=..., lineNumber=0, ret=..., surroundedByBoundary=true) at /home/romek/src/kdevplatform/language/codegen/coderepresentation.cpp:64
#11 0xb4e1b7e9 in KDevelop::FileCodeRepresentation::grep (this=0xa0df7f0, identifier=..., surroundedByBoundary=true) at /home/romek/src/kdevplatform/language/codegen/coderepresentation.cpp:159
#12 0xb4dffdcc in KDevelop::UsesCollector::startCollecting (this=0x9bb7aa8) at /home/romek/src/kdevplatform/language/duchain/navigation/usescollector.cpp:251
#13 0xb4dfa2a9 in KDevelop::UsesWidget::UsesWidget (this=0x9ba6da0, declaration=..., customCollector=0x0) at /home/romek/src/kdevplatform/language/duchain/navigation/useswidget.cpp:498
#14 0xb4de7cf5 in KDevelop::UsesNavigationContext::UsesNavigationContext (this=0x9c39608, declaration=..., previousContext=0x90c3cb8) at /home/romek/src/kdevplatform/language/duchain/navigation/usesnavigationcontext.cpp:28
#15 0xb4de5441 in KDevelop::AbstractNavigationContext::execute (this=0x90c3cb8, action=...) at /home/romek/src/kdevplatform/language/duchain/navigation/abstractnavigationcontext.cpp:173
#16 0xb4de6053 in KDevelop::AbstractNavigationContext::executeLink (this=0x90c3cb8, link=...) at /home/romek/src/kdevplatform/language/duchain/navigation/abstractnavigationcontext.cpp:135
#17 0xb4de19a6 in KDevelop::AbstractNavigationWidget::executeContextAction (this=0x91c1f28, action=...) at /home/romek/src/kdevplatform/language/duchain/navigation/abstractnavigationwidget.cpp:230
#18 0xa9dd751b in ContextBrowserPlugin::findUses (this=0x8821068) at /home/romek/src/kdevplatform/plugins/contextbrowser/contextbrowser.cpp:343
#19 0xa9dde7f7 in ContextBrowserPlugin::qt_metacall (this=0x8821068, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbf82fd88) at /home/romek/src/kdevplatform/build/plugins/contextbrowser/contextbrowser.moc:146
#20 0xb61456ba in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#21 0xb61554ff in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#22 0xb56928d9 in QAction::triggered(bool) () from /usr/lib/libQtGui.so.4
#23 0xb5692b38 in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQtGui.so.4
#24 0xb5b248ad in ?? () from /usr/lib/libQtGui.so.4
#25 0xb5b2b16b in ?? () from /usr/lib/libQtGui.so.4
#26 0xb5b2bffe in QMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#27 0xb65b1cf4 in KMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libkdeui.so.5
#28 0xb56f213a in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#29 0xb5b2c4d7 in QMenu::event(QEvent*) () from /usr/lib/libQtGui.so.4
#30 0xb5699d24 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#31 0xb569f201 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#32 0xb64d43ca in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#33 0xb613f0bb in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#34 0xb569ac3b in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#35 0xb57244c3 in ?? () from /usr/lib/libQtGui.so.4
#36 0xb5722746 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#37 0xb574db84 in ?? () from /usr/lib/libQtGui.so.4
#38 0xb4731aa8 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#39 0xb4732270 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#40 0xb4732524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#41 0xb616c53c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#42 0xb574d775 in ?? () from /usr/lib/libQtGui.so.4
#43 0xb613e289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#44 0xb613e522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#45 0xb6142ecc in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#46 0xb56978e7 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#47 0x08053600 in main (argc=<value optimized out>, argv=0x3) at /home/romek/src/kdevelop/app/main.cpp:474

Reported using DrKonqi
Comment 1 Romek 2011-06-15 11:50:42 UTC
I have reproduced it even in very small project - one file with simple callback declaration like:

template<class T>
struct Callbacks
{
    typedef void (*myCallback)(T);
};

Trying to find uses of myCallback cause a kdevelop crash.
Comment 2 Milian Wolff 2011-06-17 23:36:23 UTC
Git commit 527729ab8c2b6bb3f223c26a9dbe44ea50cba4f7 by Milian Wolff.
Committed on 17/06/2011 at 23:36.
Pushed by mwolff into branch 'master'.

make sure we don't allocate all memory and crash when trying to grep for empty identifier

BUG: 275703

M  +21   -3    language/codegen/coderepresentation.cpp     
M  +1    -1    language/codegen/coderepresentation.h     

http://commits.kde.org/kdevplatform/527729ab8c2b6bb3f223c26a9dbe44ea50cba4f7
Comment 3 Milian Wolff 2011-06-17 23:37:04 UTC
note that you still won't get proper uses for this one, as function pointers are still not properly handled by the cpp parser (bug report exists for that afair)...

please stay tuned
Comment 4 Milian Wolff 2011-06-17 23:37:16 UTC
ups, closing again