make sure we don't allocate all memory and crash when trying to grep for empty identifier

BUG: 275703